--- a/dimpomAdvanced/View/Base.lproj/Main.storyboard
+++ b/dimpomAdvanced/View/Base.lproj/Main.storyboard
@@ -14,13 +14,19 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bmX-sR-IaE">
+                                <rect key="frame" x="0.0" y="321" width="414" height="134"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-403" y="131"/>
+            <point key="canvasLocation" x="-404.34782608695656" y="130.58035714285714"/>
         </scene>
         <!--News List Controller-->
         <scene sceneID="efr-AF-TvU">
@@ -142,28 +148,28 @@
                                         <rect key="frame" x="0.0" y="0.0" width="394" height="732"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="II7-fP-bBZ">
-                                                <rect key="frame" x="0.0" y="20" width="394" height="455.5"/>
+                                                <rect key="frame" x="0.0" y="20" width="394" height="468.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Title&gt;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDh-3v-gcO">
-                                                        <rect key="frame" x="8" y="8" width="378" height="37"/>
+                                                        <rect key="frame" x="8" y="8" width="378" height="38.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="QTM-QZ-HW3"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="27"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="28"/>
                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Content&gt;" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b6U-Zm-2NV">
-                                                        <rect key="frame" x="8" y="295" width="380" height="34.5"/>
+                                                        <rect key="frame" x="8" y="312.5" width="380" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Tmf-tl-oRG"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Author&gt;" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pMw-6I-dLF">
-                                                        <rect key="frame" x="8" y="359.5" width="380" height="20"/>
+                                                        <rect key="frame" x="8" y="372.5" width="380" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="hZP-Os-MdB"/>
                                                         </constraints>
@@ -172,7 +178,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Source&gt;" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ene-fd-agG">
-                                                        <rect key="frame" x="8" y="255" width="380" height="20"/>
+                                                        <rect key="frame" x="8" y="262.5" width="380" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="LcR-wh-sgg"/>
                                                         </constraints>
@@ -181,14 +187,14 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yQv-1E-8w5">
-                                                        <rect key="frame" x="8" y="59" width="380" height="180"/>
+                                                        <rect key="frame" x="8" y="66.5" width="380" height="180"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="180" id="6jy-jy-pb4"/>
                                                             <constraint firstAttribute="width" constant="380" id="JQg-FD-pXf"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Date&gt;" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLe-VV-hyp">
-                                                        <rect key="frame" x="8" y="391.5" width="380" height="20"/>
+                                                        <rect key="frame" x="8" y="404.5" width="380" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="itm-fQ-2X7"/>
                                                         </constraints>
@@ -202,7 +208,7 @@
                                                     <constraint firstItem="ene-fd-agG" firstAttribute="top" secondItem="yQv-1E-8w5" secondAttribute="bottom" constant="16" id="CH8-6N-qkf"/>
                                                     <constraint firstItem="yQv-1E-8w5" firstAttribute="leading" secondItem="II7-fP-bBZ" secondAttribute="leading" constant="8" id="CVh-1J-Onb"/>
                                                     <constraint firstItem="pMw-6I-dLF" firstAttribute="trailing" secondItem="b6U-Zm-2NV" secondAttribute="trailing" id="Cr9-17-eVw"/>
-                                                    <constraint firstItem="yQv-1E-8w5" firstAttribute="top" secondItem="jDh-3v-gcO" secondAttribute="bottom" constant="14" id="Gpn-Zq-1v2"/>
+                                                    <constraint firstItem="yQv-1E-8w5" firstAttribute="top" secondItem="jDh-3v-gcO" secondAttribute="bottom" constant="20" id="Gpn-Zq-1v2"/>
                                                     <constraint firstItem="jDh-3v-gcO" firstAttribute="leading" secondItem="II7-fP-bBZ" secondAttribute="leading" constant="8" id="KHQ-jU-7MG"/>
                                                     <constraint firstAttribute="bottom" secondItem="sLe-VV-hyp" secondAttribute="bottom" constant="44" id="PNJ-id-wPd"/>
                                                     <constraint firstItem="jDh-3v-gcO" firstAttribute="top" secondItem="II7-fP-bBZ" secondAttribute="top" constant="8" id="Q8B-DX-3Wm"/>
@@ -211,7 +217,7 @@
                                                     <constraint firstItem="sLe-VV-hyp" firstAttribute="trailing" secondItem="pMw-6I-dLF" secondAttribute="trailing" id="byJ-Ul-Boe"/>
                                                     <constraint firstItem="sLe-VV-hyp" firstAttribute="leading" secondItem="pMw-6I-dLF" secondAttribute="leading" id="cdl-EB-m9U"/>
                                                     <constraint firstItem="sLe-VV-hyp" firstAttribute="top" secondItem="pMw-6I-dLF" secondAttribute="bottom" constant="12" id="ilP-mF-DEf"/>
-                                                    <constraint firstItem="b6U-Zm-2NV" firstAttribute="top" secondItem="ene-fd-agG" secondAttribute="bottom" constant="20" id="imP-7t-Ugk"/>
+                                                    <constraint firstItem="b6U-Zm-2NV" firstAttribute="top" secondItem="ene-fd-agG" secondAttribute="bottom" constant="30" id="imP-7t-Ugk"/>
                                                     <constraint firstItem="ene-fd-agG" firstAttribute="leading" secondItem="II7-fP-bBZ" secondAttribute="leading" constant="8" id="lLn-4U-ANe"/>
                                                     <constraint firstAttribute="trailing" secondItem="ene-fd-agG" secondAttribute="trailing" constant="6" id="nkY-os-vp8"/>
                                                     <constraint firstAttribute="trailing" secondItem="yQv-1E-8w5" secondAttribute="trailing" constant="6" id="oYn-YU-vG0"/>
