--- a/dimpomAdvanced/View/NewsCell/NewsCell.xib
+++ b/dimpomAdvanced/View/NewsCell/NewsCell.xib
@@ -19,21 +19,19 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MgS-hw-i0w">
                         <rect key="frame" x="10" y="10" width="300" height="240"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oag-1i-dUM">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="InO-Gw-LBU">
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="3W4-45-JTg"/>
+                                    <constraint firstAttribute="width" constant="300" id="e2N-IO-lMc"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oag-1i-dUM">
                                 <rect key="frame" x="8" y="152" width="284" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="SXn-e1-7Ab"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="publishedAt" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hdb-rc-IiI">
-                                <rect key="frame" x="8" y="219.5" width="284" height="15"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="TYe-XP-6un"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="12"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -46,13 +44,15 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="InO-Gw-LBU">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="140"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="publishedAt" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hdb-rc-IiI">
+                                <rect key="frame" x="8" y="219.5" width="284" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="3W4-45-JTg"/>
-                                    <constraint firstAttribute="width" constant="300" id="e2N-IO-lMc"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="15" id="TYe-XP-6un"/>
                                 </constraints>
-                            </imageView>
+                                <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="12"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -68,7 +68,7 @@
                             <constraint firstItem="Hdb-rc-IiI" firstAttribute="leading" secondItem="a7v-Vm-EJL" secondAttribute="leading" id="b1n-oa-5MF"/>
                             <constraint firstItem="Oag-1i-dUM" firstAttribute="leading" secondItem="MgS-hw-i0w" secondAttribute="leading" constant="8" id="gdd-qb-rsk"/>
                             <constraint firstAttribute="trailing" secondItem="InO-Gw-LBU" secondAttribute="trailing" id="oqT-6U-azv"/>
-                            <constraint firstAttribute="bottom" secondItem="Hdb-rc-IiI" secondAttribute="bottom" constant="5.5" id="pA7-Ai-KGM"/>
+                            <constraint firstItem="Hdb-rc-IiI" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="MgS-hw-i0w" secondAttribute="bottom" constant="-5.5" id="pA7-Ai-KGM"/>
                             <constraint firstItem="InO-Gw-LBU" firstAttribute="leading" secondItem="MgS-hw-i0w" secondAttribute="leading" id="sUW-wy-KHI"/>
                         </constraints>
                     </view>
