--- a/dimpomAdvanced/View/Base.lproj/Main.storyboard
+++ b/dimpomAdvanced/View/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pxo-dj-FsB">
-                                <rect key="frame" x="0.0" y="120" width="414" height="742"/>
+                                <rect key="frame" x="0.0" y="125" width="414" height="737"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                         </subviews>
@@ -81,7 +81,7 @@
                             <constraint firstItem="pxo-dj-FsB" firstAttribute="leading" secondItem="nQv-cY-UEH" secondAttribute="leading" id="Pzw-u7-1fx"/>
                             <constraint firstItem="XJf-oh-vVg" firstAttribute="leading" secondItem="nQv-cY-UEH" secondAttribute="leading" constant="10" id="V9O-gN-eYj"/>
                             <constraint firstItem="nQv-cY-UEH" firstAttribute="trailing" secondItem="XJf-oh-vVg" secondAttribute="trailing" constant="10" id="WRl-iG-rtr"/>
-                            <constraint firstItem="pxo-dj-FsB" firstAttribute="top" secondItem="XJf-oh-vVg" secondAttribute="bottom" id="cDv-24-AZn"/>
+                            <constraint firstItem="pxo-dj-FsB" firstAttribute="top" secondItem="XJf-oh-vVg" secondAttribute="bottom" constant="5" id="cDv-24-AZn"/>
                             <constraint firstItem="pxo-dj-FsB" firstAttribute="bottom" secondItem="nQv-cY-UEH" secondAttribute="bottom" id="m3r-d7-wp9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nQv-cY-UEH"/>
@@ -148,7 +148,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="394" height="732"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="II7-fP-bBZ">
-                                                <rect key="frame" x="0.0" y="20" width="394" height="468.5"/>
+                                                <rect key="frame" x="0.0" y="20" width="394" height="458.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Title&gt;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDh-3v-gcO">
                                                         <rect key="frame" x="8" y="8" width="378" height="38.5"/>
@@ -169,7 +169,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Author&gt;" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pMw-6I-dLF">
-                                                        <rect key="frame" x="8" y="372.5" width="380" height="20"/>
+                                                        <rect key="frame" x="8" y="362.5" width="380" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="hZP-Os-MdB"/>
                                                         </constraints>
@@ -186,15 +186,25 @@
                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yQv-1E-8w5">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="APB-x8-o68">
                                                         <rect key="frame" x="8" y="66.5" width="380" height="180"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yQv-1E-8w5">
+                                                                <rect key="frame" x="1" y="1" width="378" height="178"/>
+                                                            </imageView>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="180" id="6jy-jy-pb4"/>
-                                                            <constraint firstAttribute="width" constant="380" id="JQg-FD-pXf"/>
+                                                            <constraint firstAttribute="bottom" secondItem="yQv-1E-8w5" secondAttribute="bottom" constant="1" id="2UK-LS-5aJ"/>
+                                                            <constraint firstAttribute="width" constant="380" id="7gC-nX-tUe"/>
+                                                            <constraint firstAttribute="trailing" secondItem="yQv-1E-8w5" secondAttribute="trailing" constant="1" id="Nz8-Wr-e6e"/>
+                                                            <constraint firstItem="yQv-1E-8w5" firstAttribute="top" secondItem="APB-x8-o68" secondAttribute="top" constant="1" id="aLU-n6-vfr"/>
+                                                            <constraint firstItem="yQv-1E-8w5" firstAttribute="leading" secondItem="APB-x8-o68" secondAttribute="leading" constant="1" id="bQ1-Cw-6IK"/>
+                                                            <constraint firstAttribute="height" constant="180" id="uKk-w8-OeY"/>
                                                         </constraints>
-                                                    </imageView>
+                                                    </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Date&gt;" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLe-VV-hyp">
-                                                        <rect key="frame" x="8" y="404.5" width="380" height="20"/>
+                                                        <rect key="frame" x="8" y="394.5" width="380" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="itm-fQ-2X7"/>
                                                         </constraints>
@@ -205,22 +215,22 @@
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
-                                                    <constraint firstItem="ene-fd-agG" firstAttribute="top" secondItem="yQv-1E-8w5" secondAttribute="bottom" constant="16" id="CH8-6N-qkf"/>
-                                                    <constraint firstItem="yQv-1E-8w5" firstAttribute="leading" secondItem="II7-fP-bBZ" secondAttribute="leading" constant="8" id="CVh-1J-Onb"/>
                                                     <constraint firstItem="pMw-6I-dLF" firstAttribute="trailing" secondItem="b6U-Zm-2NV" secondAttribute="trailing" id="Cr9-17-eVw"/>
-                                                    <constraint firstItem="yQv-1E-8w5" firstAttribute="top" secondItem="jDh-3v-gcO" secondAttribute="bottom" constant="20" id="Gpn-Zq-1v2"/>
                                                     <constraint firstItem="jDh-3v-gcO" firstAttribute="leading" secondItem="II7-fP-bBZ" secondAttribute="leading" constant="8" id="KHQ-jU-7MG"/>
                                                     <constraint firstAttribute="bottom" secondItem="sLe-VV-hyp" secondAttribute="bottom" constant="44" id="PNJ-id-wPd"/>
                                                     <constraint firstItem="jDh-3v-gcO" firstAttribute="top" secondItem="II7-fP-bBZ" secondAttribute="top" constant="8" id="Q8B-DX-3Wm"/>
-                                                    <constraint firstItem="pMw-6I-dLF" firstAttribute="top" secondItem="b6U-Zm-2NV" secondAttribute="bottom" constant="30" id="RHn-28-h46"/>
+                                                    <constraint firstItem="pMw-6I-dLF" firstAttribute="top" secondItem="b6U-Zm-2NV" secondAttribute="bottom" constant="20" id="RHn-28-h46"/>
                                                     <constraint firstItem="b6U-Zm-2NV" firstAttribute="leading" secondItem="ene-fd-agG" secondAttribute="leading" id="ULo-bk-dHL"/>
                                                     <constraint firstItem="sLe-VV-hyp" firstAttribute="trailing" secondItem="pMw-6I-dLF" secondAttribute="trailing" id="byJ-Ul-Boe"/>
+                                                    <constraint firstItem="APB-x8-o68" firstAttribute="top" secondItem="jDh-3v-gcO" secondAttribute="bottom" constant="20" id="cCS-xs-mBM"/>
                                                     <constraint firstItem="sLe-VV-hyp" firstAttribute="leading" secondItem="pMw-6I-dLF" secondAttribute="leading" id="cdl-EB-m9U"/>
+                                                    <constraint firstItem="ene-fd-agG" firstAttribute="top" secondItem="APB-x8-o68" secondAttribute="bottom" constant="16" id="fAe-eN-cET"/>
+                                                    <constraint firstAttribute="trailing" secondItem="APB-x8-o68" secondAttribute="trailing" constant="6" id="fNX-A2-nuS"/>
                                                     <constraint firstItem="sLe-VV-hyp" firstAttribute="top" secondItem="pMw-6I-dLF" secondAttribute="bottom" constant="12" id="ilP-mF-DEf"/>
                                                     <constraint firstItem="b6U-Zm-2NV" firstAttribute="top" secondItem="ene-fd-agG" secondAttribute="bottom" constant="30" id="imP-7t-Ugk"/>
+                                                    <constraint firstItem="APB-x8-o68" firstAttribute="leading" secondItem="II7-fP-bBZ" secondAttribute="leading" constant="8" id="kx5-ve-90c"/>
                                                     <constraint firstItem="ene-fd-agG" firstAttribute="leading" secondItem="II7-fP-bBZ" secondAttribute="leading" constant="8" id="lLn-4U-ANe"/>
                                                     <constraint firstAttribute="trailing" secondItem="ene-fd-agG" secondAttribute="trailing" constant="6" id="nkY-os-vp8"/>
-                                                    <constraint firstAttribute="trailing" secondItem="yQv-1E-8w5" secondAttribute="trailing" constant="6" id="oYn-YU-vG0"/>
                                                     <constraint firstItem="pMw-6I-dLF" firstAttribute="leading" secondItem="b6U-Zm-2NV" secondAttribute="leading" id="vja-G1-1cR"/>
                                                     <constraint firstAttribute="trailing" secondItem="jDh-3v-gcO" secondAttribute="trailing" constant="8" id="wcr-LC-BQS"/>
                                                     <constraint firstItem="b6U-Zm-2NV" firstAttribute="trailing" secondItem="ene-fd-agG" secondAttribute="trailing" id="yit-Tu-AA6"/>
@@ -262,6 +272,7 @@
                         <outlet property="articleContentLabel" destination="b6U-Zm-2NV" id="ZCu-LS-FjO"/>
                         <outlet property="articleDateLabel" destination="sLe-VV-hyp" id="YGx-Ax-ODu"/>
                         <outlet property="articleImageView" destination="yQv-1E-8w5" id="iHb-os-gIO"/>
+                        <outlet property="articlePhotoView" destination="APB-x8-o68" id="b1D-qb-Gki"/>
                         <outlet property="articleSourceLabel" destination="ene-fd-agG" id="Bb7-Qk-u4I"/>
                         <outlet property="atricleTitleLabel" destination="jDh-3v-gcO" id="Xr5-Wd-jQF"/>
                         <outlet property="backButton" destination="mEr-Rt-X0Q" id="H3d-gX-4kE"/>
